Fix for bug 28 https://bugs.opendaylight.org/show_bug.cgi?id=28
Updated surefire configuration to set heap to 1gb and permgen to 256mb.
These settings allow the Northbound integration tests to pass.

Change-Id: I1a9e1eda542d63e0d05607ce05ec2af2df0e2b83
Signed-off-by: Prasanth Pallamreddy <ppallamr@cisco.com>